--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="container">
-    <h2 class="ml-4">Pairwise Sequence Alignment Tool</h2>
+    <h2 class="ml-4">Visualizador</h2>
     <div class="info-div">
       <div class="form-div">
         <div class="col-6">
